Fix overflow

--- a/src/components/PokemonMoves.scss
+++ b/src/components/PokemonMoves.scss
@@ -80,6 +80,8 @@ details[open] {
     max-width: fit-content;
 
     summary {
+        max-width: calc(33vw);
+        white-space: nowrap;
         font-size: small;
         font-weight: 500;
         display: flex;
@@ -87,6 +89,11 @@ details[open] {
         gap: 9px;
         height: 20px;
         line-height: 18px;
+
+        span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     p {
